--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.5",
+    "@swimlane/ngx-charts": "^20.5.0",
+    "chart.js": "^4.4.3",
+    "d3": "^7.9.0",
     "express": "^4.18.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "ng2-charts": "^6.0.1",
+    "primeng": "^17.18.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
