--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.5",
+    "@auth0/angular-jwt": "^5.2.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "chart.js": "^4.4.3",
     "d3": "^7.9.0",
