--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "chart.js": "^4.4.3",
     "d3": "^7.9.0",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "ng2-charts": "^6.0.1",
     "primeng": "^17.18.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
