--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.5",
     "@auth0/angular-jwt": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "chart.js": "^4.4.3",
     "d3": "^7.9.0",
     "express": "^4.18.2",
-    "html2canvas": "^1.4.1",
-
     "file-saver": "^2.0.5",
-
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "ng2-charts": "^6.0.1",
+    "pdfmake": "^0.2.10",
     "primeng": "^17.18.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -48,6 +48,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/pdfmake": "^0.2.9",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
